native/include/photon/photon.h

/* ------------------------------------------------------------------------ */
/* Scalars                                                                    */
/* ------------------------------------------------------------------------ */

/** 0 = false, non-zero = true. Never use C `bool` across the boundary. */
typedef int32_t ph_bool;
/**
 * Packed RGBA, one byte per channel, red in the most significant byte:
 * 0xRRGGBBAA. Bindings can compute this without calling us.
 *
 * PH_COLOR_AUTO (0 — transparent black) means "let the theme or palette
 * decide". Fully transparent black is never a useful explicit color, so it is
 * free to spend as the sentinel.
 */
typedef uint32_t ph_color;
/** Inclusive data-space interval. */
typedef struct ph_range {
  double lo;
  double hi;
} ph_range;
/* ------------------------------------------------------------------------ */
/* Enums (mirroring @photonviz/core)                                          */
/* ------------------------------------------------------------------------ */

/** Mirrors core `ScaleType`. */
typedef int32_t ph_scale_type;
/** Mirrors core `InteractionMode`. */
typedef int32_t ph_mode;
/** Mirrors core `RenderType` — the GL buffer-usage hint. */
typedef int32_t ph_render_type;
/** Mirrors core `LineJoin`. */
typedef int32_t ph_line_join;
/** Mirrors core `LineOptions.step`. */
typedef int32_t ph_step;
/** Mirrors core `MarkerShape`. */
typedef int32_t ph_marker;
/** Mirrors core `PickMode` — how hover chooses the highlighted point. */
typedef int32_t ph_pick_mode;
/** Which corner of the plot region the legend sits in. */
typedef int32_t ph_legend_position;
typedef int32_t ph_theme;
/* ------------------------------------------------------------------------ */
/* Colormaps and palettes                                                     */
/* ------------------------------------------------------------------------ */

/**
 * How a layer asks for a continuous colormap.
 *
 * `name` is a built-in ("viridis", "plasma", "inferno", "magma", "cividis",
 * "turbo", "grayscale", "coolwarm", "RdBu", "BrBG", "spectral", "twilight") or
 * anything passed to ph_colormap_register. Unknown names — and NULL — resolve to
 * viridis rather than failing, because a chart that draws in the wrong colours
 * is easier to notice than one that does not draw.
 *
 * `stops` overrides the name with anchors given inline, spaced evenly and
 * interpolated linearly. Their alpha is ignored; a colormap carries no opacity.
 */
typedef struct ph_colormap_spec {
  uint32_t        struct_size;
  const char*     name;
  const ph_color* stops;
  int32_t         stop_count;
  /** High values take the low end's colour. */
  ph_bool         reverse;
  /** 0 is continuous; otherwise the ramp is flattened into this many bands. */
  int32_t         discrete_steps;
} ph_colormap_spec;
/** Where the deepest drawdown of an equity curve started and bottomed. */
typedef struct ph_drawdown {
  /** The deepest drawdown as a negative fraction: -0.32 is -32%. */
  double  max_drawdown;
  int32_t trough_index;
  int32_t peak_index;
} ph_drawdown;
/* -- Statistics ----------------------------------------------------------- */

/** A regular grid's shape and the data-space rectangle it covers. */
typedef struct ph_grid_info {
  int32_t  cols;
  int32_t  rows;
  ph_range x;
  ph_range y;
} ph_grid_info;
/** The five-number summary a Tukey box draws, and what falls outside it. */
typedef struct ph_box_stats {
  double  min;
  double  q1;
  double  median;
  double  q3;
  double  max;
  /** The extreme values still inside the 1.5-IQR fences — not the fences. */
  double  whisker_lo;
  double  whisker_hi;
  /** How many outliers there were, whatever `capacity` allowed room for. */
  int32_t outlier_count;
  /** Zero when the input held no finite value, in which case nothing else is set. */
  ph_bool valid;
} ph_box_stats;
/** An ordinary-least-squares fit of y = slope*x + intercept. */
typedef struct ph_linear_fit {
  double  slope;
  double  intercept;
  /** Coefficient of determination, 0..1. */
  double  r2;
  /** Standard error of the residuals. */
  double  stderror;
  /** Points used; non-finite pairs are skipped rather than poisoning the fit. */
  int32_t n;
} ph_linear_fit;
/** The four regression scores, which are always read together. */
typedef struct ph_regression_metrics {
  double mse;
  /** The error in the target's own units. */
  double rmse;
  /** Less swayed by outliers than rmse. */
  double mae;
  /** 1 is perfect, 0 matches predicting the mean, negative is worse than that. */
  double r2;
} ph_regression_metrics;
/** Precision, recall, F1 and support for one class. */
typedef struct ph_class_score {
  double  precision;
  double  recall;
  double  f1;
  /** True instances of this class. */
  double  support;
  int32_t label;
} ph_class_score;
/** One averaging rule's view of a report. */
typedef struct ph_class_average {
  double precision;
  double recall;
  double f1;
} ph_class_average;
/** The scalars of a scikit-learn shaped classification report. */
typedef struct ph_classification_report {
  double            accuracy;
  /** Unweighted over classes — every class counts the same. */
  ph_class_average  macro;
  /** Support-weighted — dominated by the common classes. */
  ph_class_average  weighted;
  /** How many classes there were, whatever `capacity` allowed room for. */
  int32_t           classes;
} ph_classification_report;
/** How to read a CSV. Zero means the defaults, as everywhere else. */
typedef struct ph_csv_options {
  uint32_t struct_size;
  /** Field delimiter as a character code. 0 means ','. */
  int32_t  delimiter;
  /** The first row is data, not headers — which are then named col0, col1, … */
  ph_bool  no_header;
  /** Keep blank lines instead of dropping them. */
  ph_bool  keep_empty_lines;
} ph_csv_options;
/* ------------------------------------------------------------------------ */
/* Descriptors                                                                */
/* ------------------------------------------------------------------------ */

/** Plot margins in logical pixels. All-zero means the core defaults (16/16/40/56). */
typedef struct ph_margin {
  float top;
  float right;
  float bottom;
  float left;
} ph_margin;
/** One axis's scale configuration. Mirrors core `AxisScaleOptions`. */
typedef struct ph_axis_desc {
  uint32_t      struct_size;
  ph_scale_type type;
  /** Fixed domain. Leave lo == hi to autoscale to the data. */
  ph_range      domain;
  /** Factor labels for PH_SCALE_CATEGORICAL. UTF-8, `factor_count` entries. */
  const char* const* factors;
  int32_t       factor_count;
  /** Per-index epoch-ms timestamps for PH_SCALE_ORDINAL_TIME. */
  const double* times;
  int32_t       time_count;
  /**
   * Tint for a secondary y axis added with ph_plot_add_y_axis: its line, ticks
   * and labels all take it, so a reader can tell at a glance which series
   * belongs to which side. PH_COLOR_AUTO keeps the theme's colour.
   */
  ph_color      color;
} ph_axis_desc;
/**
 * Three-state flag for fields whose default is neither on nor off but
 * "whatever the context implies". Zero is still the default, so the
 * zero-initialized rule holds.
 */
typedef int32_t ph_toggle;
/** One explicit axis tick. Mirrors core `Tick`. */
typedef struct ph_tick {
  double      value;
  /** UTF-8. NULL means "format with the scale's own formatter". */
  const char* label;
  ph_bool     minor;
  /** Grid line. Default is on for a major tick and off for a minor one. */
  ph_toggle   grid;
} ph_tick;
/**
 * How one axis is drawn. Mirrors the style half of core `AxisConfig`.
 *
 * Every field is zero-means-default, so an axis left alone looks exactly like
 * the web core's. Two consequences of that rule worth knowing: a zero `width`
 * or `length` reads as "use the default", so the smallest hairline you can ask
 * for is a fractional value rather than 0; and PH_COLOR_AUTO means "take the
 * theme's colour", which is why it is not spelled as transparent.
 *
 * Fonts are a size in logical pixels rather than a CSS `font` string: the
 * library embeds one family (see DESIGN.md) and cannot honour a family name.
 */
typedef struct ph_axis_config {
  uint32_t     struct_size;
  /* The axis line, its ticks and its grid are all ON in the core, so — as with
   * ph_plot_desc — the descriptor spells the negation. */
  ph_bool      no_axis_line;
  ph_bool      no_ticks;
  ph_bool      no_grid;

  ph_color     axis_line_color;
  float        axis_line_width;    /* 0 = 1  */
  ph_color     tick_color;
  float        tick_length;        /* 0 = 5  */
  float        tick_width;         /* 0 = 1  */

  ph_color     label_color;
  float        label_size;         /* 0 = 12 */
  float        label_rotation;     /* degrees, clockwise; x axis only */
  float        label_standoff;     /* 0 = 3  */

  const char*  title;              /* UTF-8, may be NULL */
  ph_color     title_color;
  float        title_size;         /* 0 = 12 */

  ph_color     grid_color;
  ph_color     grid_minor_color;
  float        grid_width;         /* 0 = 1 */
  /** Dash pattern in logical px, alternating on/off. NULL = solid. Max 8. */
  const float* grid_dash;
  int32_t      grid_dash_count;

  /** Minor ticks between each pair of majors. 0 = none; linear scales only. */
  int32_t      minor_ticks;
} ph_axis_config;
/** Mirrors core `PlotOptions` — the subset that is not host-specific. */
typedef struct ph_plot_desc {
  uint32_t     struct_size;
  /** Logical (CSS-equivalent) size. Device size is this times the frame dpr. */
  int32_t      width;
  int32_t      height;
  ph_theme     theme;
  ph_margin    margin;
  ph_axis_desc x;
  ph_axis_desc y;
  ph_color     background;   /* plot region fill; PH_COLOR_AUTO = transparent */
  ph_color     border;       /* full-canvas fill incl. margins               */
  const char*  title;        /* UTF-8, may be NULL                           */
  ph_mode      mode;
  ph_pick_mode pick;
  /*
   * The four features below are ON by default in the core, so the descriptor
   * spells the negation. That keeps the "zero-initialized struct == core
   * defaults" rule true, which is what lets a C# `new ph_plot_desc()` or a Java
   * `MemorySegment.allocate` be correct without calling ph_plot_desc_init.
   */
  ph_bool      no_interaction;  /* wheel-zoom and drag off      */
  ph_bool      no_hover;        /* hover crosshair + tooltip off */
  ph_bool      no_crosshair;    /* XY guide lines off            */
  ph_bool      no_tooltip;      /* the hover readout panel off   */
  ph_bool      no_colorbar;     /* auto colorbar off             */
  /* These are OFF by default, so they read positively. */
  ph_bool      equal_aspect;
  ph_bool      bounded_pan;
  ph_bool      legend;
  /** Where the legend goes. Ignored unless `legend` is set. */
  ph_legend_position legend_position;
  /** Lay the entries out in a row instead of a column. */
  ph_bool      legend_horizontal;
  /** Clicking an entry no longer toggles its series. On in the core. */
  ph_bool      legend_static;
} ph_plot_desc;
/**
 * Mirrors core `LineOptions`.
 *
 * x/y point at caller-owned arrays that are copied during the call — the engine
 * uploads to GPU buffers and never retains the pointers. That is what makes the
 * ABI safe to call from a GC'd language without pinning.
 */
typedef struct ph_line_desc {
  uint32_t       struct_size;
  const double*  x;
  const double*  y;
  int32_t        count;
  ph_color       color;
  /** Line width in logical px. 0 = core default. */
  float          width;
  const char*    name;       /* UTF-8 legend label, may be NULL */
  const char*    y_axis;     /* named y axis, NULL = primary    */
  ph_step        step;
  ph_line_join   join;
  /** For PH_JOIN_MITER. 0 = core default (4). */
  float          miter_limit;
  /** Dash pattern in logical px, alternating on/off. NULL = solid. Max 8. */
  const float*   dash;
  int32_t        dash_count;
  /** 0 = default (on). Set `no_decimate` to turn min/max decimation off. */
  ph_bool        no_decimate;
  ph_render_type render_type;
} ph_line_desc;
/** Mirrors core `ScatterOptions`. */
typedef struct ph_scatter_desc {
  uint32_t        struct_size;
  const double*   x;
  const double*   y;
  int32_t         count;
  ph_color        color;
  /** Marker diameter in logical px. 0 = core default. */
  float           size;
  /** Per-point diameter, `count` entries. NULL = uniform `size`. */
  const float*    sizes;
  /** Per-point color, `count` entries. NULL = uniform `color`. */
  const ph_color* colors;
  ph_marker       marker;
  const char*     name;
  const char*     y_axis;
  /** Per-point values driving a colormap. NULL = no color mapping. */
  const double*   color_by;
  /** Value range mapped to [0,1]. lo == hi = the data min/max. */
  ph_range        color_by_domain;
  /** The ramp `color_by` maps through. NULL is viridis, the core's default. */
  const ph_colormap_spec* color_map;
  ph_render_type  render_type;
} ph_scatter_desc;