native/bindings/csharp/Photon.g.cs


    /// <summary>ph_drawdown — 16 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_drawdown
    {
        /// <summary>offset 0</summary>
        public double max_drawdown;
        /// <summary>offset 8</summary>
        public int trough_index;
        /// <summary>offset 12</summary>
        public int peak_index;
    }

    /// <summary>ph_grid_info — 40 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_grid_info
    {
        /// <summary>offset 0</summary>
        public int cols;
        /// <summary>offset 4</summary>
        public int rows;
        /// <summary>offset 8</summary>
        public ph_range x;
        /// <summary>offset 24</summary>
        public ph_range y;
    }

    /// <summary>ph_box_stats — 64 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_box_stats
    {
        /// <summary>offset 0</summary>
        public double min;
        /// <summary>offset 8</summary>
        public double q1;
        /// <summary>offset 16</summary>
        public double median;
        /// <summary>offset 24</summary>
        public double q3;
        /// <summary>offset 32</summary>
        public double max;
        /// <summary>offset 40</summary>
        public double whisker_lo;
        /// <summary>offset 48</summary>
        public double whisker_hi;
        /// <summary>offset 56</summary>
        public int outlier_count;
        /// <summary>offset 60</summary>
        public int valid;
    }

    /// <summary>ph_linear_fit — 40 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_linear_fit
    {
        /// <summary>offset 0</summary>
        public double slope;
        /// <summary>offset 8</summary>
        public double intercept;
        /// <summary>offset 16</summary>
        public double r2;
        /// <summary>offset 24</summary>
        public double stderror;
        /// <summary>offset 32</summary>
        public int n;
    }

    /// <summary>ph_regression_metrics — 32 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_regression_metrics
    {
        /// <summary>offset 0</summary>
        public double mse;
        /// <summary>offset 8</summary>
        public double rmse;
        /// <summary>offset 16</summary>
        public double mae;
        /// <summary>offset 24</summary>
        public double r2;
    }

    /// <summary>ph_class_score — 40 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_class_score
    {
        /// <summary>offset 0</summary>
        public double precision;
        /// <summary>offset 8</summary>
        public double recall;
        /// <summary>offset 16</summary>
        public double f1;
        /// <summary>offset 24</summary>
        public double support;
        /// <summary>offset 32</summary>
        public int label;
    }

    /// <summary>ph_class_average — 24 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_class_average
    {
        /// <summary>offset 0</summary>
        public double precision;
        /// <summary>offset 8</summary>
        public double recall;
        /// <summary>offset 16</summary>
        public double f1;
    }

    /// <summary>ph_classification_report — 64 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_classification_report
    {
        /// <summary>offset 0</summary>
        public double accuracy;
        /// <summary>offset 8</summary>
        public ph_class_average macro;
        /// <summary>offset 32</summary>
        public ph_class_average weighted;
        /// <summary>offset 56</summary>
        public int classes;
    }

    /// <summary>ph_csv_options — 16 bytes, alignment 4.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_csv_options
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int delimiter;
        /// <summary>offset 8</summary>
        public int no_header;
        /// <summary>offset 12</summary>
        public int keep_empty_lines;
    }

    /// <summary>ph_margin — 16 bytes, alignment 4.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_margin
    {
        /// <summary>offset 0</summary>
        public float top;
        /// <summary>offset 4</summary>
        public float right;
        /// <summary>offset 8</summary>
        public float bottom;
        /// <summary>offset 12</summary>
        public float left;
    }

    /// <summary>ph_axis_desc — 56 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_axis_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int type;
        /// <summary>offset 8</summary>
        public ph_range domain;
        /// <summary>offset 24</summary>
        public IntPtr factors;
        /// <summary>offset 32</summary>
        public int factor_count;
        /// <summary>offset 40</summary>
        public IntPtr times;
        /// <summary>offset 48</summary>
        public int time_count;
        /// <summary>offset 52</summary>
        public uint color;
    }

    /// <summary>ph_tick — 24 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_tick
    {
        /// <summary>offset 0</summary>
        public double value;
        /// <summary>offset 8</summary>
        public IntPtr label;
        /// <summary>offset 16</summary>
        public int minor;
        /// <summary>offset 20</summary>
        public int grid;
    }

    /// <summary>ph_axis_config — 104 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_axis_config
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int no_axis_line;
        /// <summary>offset 8</summary>
        public int no_ticks;
        /// <summary>offset 12</summary>
        public int no_grid;
        /// <summary>offset 16</summary>
        public uint axis_line_color;
        /// <summary>offset 20</summary>
        public float axis_line_width;
        /// <summary>offset 24</summary>
        public uint tick_color;
        /// <summary>offset 28</summary>
        public float tick_length;
        /// <summary>offset 32</summary>
        public float tick_width;
        /// <summary>offset 36</summary>
        public uint label_color;
        /// <summary>offset 40</summary>
        public float label_size;
        /// <summary>offset 44</summary>
        public float label_rotation;
        /// <summary>offset 48</summary>
        public float label_standoff;
        /// <summary>offset 56</summary>
        public IntPtr title;
        /// <summary>offset 64</summary>
        public uint title_color;
        /// <summary>offset 68</summary>
        public float title_size;
        /// <summary>offset 72</summary>
        public uint grid_color;
        /// <summary>offset 76</summary>
        public uint grid_minor_color;
        /// <summary>offset 80</summary>
        public float grid_width;
        /// <summary>offset 88</summary>
        public IntPtr grid_dash;
        /// <summary>offset 96</summary>
        public int grid_dash_count;
        /// <summary>offset 100</summary>
        public int minor_ticks;
    }

    /// <summary>ph_plot_desc — 216 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_plot_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 4</summary>
        public int width;
        /// <summary>offset 8</summary>
        public int height;
        /// <summary>offset 12</summary>
        public int theme;
        /// <summary>offset 16</summary>
        public ph_margin margin;
        /// <summary>offset 32</summary>
        public ph_axis_desc x;
        /// <summary>offset 88</summary>
        public ph_axis_desc y;
        /// <summary>offset 144</summary>
        public uint background;
        /// <summary>offset 148</summary>
        public uint border;
        /// <summary>offset 152</summary>
        public IntPtr title;
        /// <summary>offset 160</summary>
        public int mode;
        /// <summary>offset 164</summary>
        public int pick;
        /// <summary>offset 168</summary>
        public int no_interaction;
        /// <summary>offset 172</summary>
        public int no_hover;
        /// <summary>offset 176</summary>
        public int no_crosshair;
        /// <summary>offset 180</summary>
        public int no_tooltip;
        /// <summary>offset 184</summary>
        public int no_colorbar;
        /// <summary>offset 188</summary>
        public int equal_aspect;
        /// <summary>offset 192</summary>
        public int bounded_pan;
        /// <summary>offset 196</summary>
        public int legend;
        /// <summary>offset 200</summary>
        public int legend_position;
        /// <summary>offset 204</summary>
        public int legend_horizontal;
        /// <summary>offset 208</summary>
        public int legend_static;
    }

    /// <summary>ph_line_desc — 96 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_line_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public int count;
        /// <summary>offset 28</summary>
        public uint color;
        /// <summary>offset 32</summary>
        public float width;
        /// <summary>offset 40</summary>
        public IntPtr name;
        /// <summary>offset 48</summary>
        public IntPtr y_axis;
        /// <summary>offset 56</summary>
        public int step;
        /// <summary>offset 60</summary>
        public int join;
        /// <summary>offset 64</summary>
        public float miter_limit;
        /// <summary>offset 72</summary>
        public IntPtr dash;
        /// <summary>offset 80</summary>
        public int dash_count;
        /// <summary>offset 84</summary>
        public int no_decimate;
        /// <summary>offset 88</summary>
        public int render_type;
    }

    /// <summary>ph_scatter_desc — 120 bytes, alignment 8.</summary>
    [StructLayout(LayoutKind.Sequential)]
    public struct ph_scatter_desc
    {
        /// <summary>offset 0</summary>
        public uint struct_size;
        /// <summary>offset 8</summary>
        public IntPtr x;
        /// <summary>offset 16</summary>
        public IntPtr y;
        /// <summary>offset 24</summary>
        public int count;
        /// <summary>offset 28</summary>
        public uint color;
        /// <summary>offset 32</summary>
        public float size;
        /// <summary>offset 40</summary>
        public IntPtr sizes;
        /// <summary>offset 48</summary>
        public IntPtr colors;
        /// <summary>offset 56</summary>
        public int marker;
        /// <summary>offset 64</summary>
        public IntPtr name;
        /// <summary>offset 72</summary>
        public IntPtr y_axis;
        /// <summary>offset 80</summary>
        public IntPtr color_by;
        /// <summary>offset 88</summary>
        public ph_range color_by_domain;
        /// <summary>offset 104</summary>
        public IntPtr color_map;
        /// <summary>offset 112</summary>
        public int render_type;
    }
